--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -1,74 +1,53 @@
 .about {
     position: relative;
-    // background-image: url('../img/about4.png'); 
-    height: 900px;
-    width: 100%;
-    background-repeat:no-repeat; 
+    height: 900px; // width: 100%;
     background-color: beige;
-
     &--white {
         background: #faf8f0;
     }
-
     &__list {
-            display: block;
-            font-family: 'Roboto',sans-serif;
-            color:#848e91;
-            padding:0px 50px;
-            float:left;
-         
-         
+        display: block;
+        font-family: 'Roboto', sans-serif;
+        color: #848e91;
+        padding: 0px 50px;
+        float: left;
     }
     &__item {
         // display: block;
-        padding-bottom: 40px;
-        // display: inline-block;
+        padding-bottom: 40px; // display: inline-block;
         &:hover {
             border-right: 1px solid #0548be;
             height: 40px;
         }
     }
     &__link {
-
         &:hover {
-            color:#0548be;
+            color: #0548be;
             transition: 0.5s ease-in-out;
         }
-        
     }
-
     &-left {
-        
         position: relative;
         width: 50%;
         float: left;
-
     }
     &-right {
         position: relative;
+        position: absolute;
+        right: 0;
         width: 50%;
         float: left;
-        
         &__wrapper {
-
             padding: 0 20px;
-
         }
         &__description {
-
-            margin-left:40px;
+            margin-left: 40px;
             margin-right: 100px;
-            font-family: 'Roboto',sans-serif;
-            color:#7f8084;
-
+            font-family: 'Roboto', sans-serif;
+            color: #7f8084;
         }
         &-content {
             margin: 0 50px;
         }
-
     }
-
-
-
-
 }
