--- a/src/sass/modules/_main-menu.scss
+++ b/src/sass/modules/_main-menu.scss
@@ -30,7 +30,8 @@
 
         display: inline-block;
         margin-left:-4px; 
-
+        padding-right: 30px;
+        padding-bottom: 30px;
 
         &--welcome {
 
