--- a/src/sass/modules/_triangle.scss
+++ b/src/sass/modules/_triangle.scss
@@ -17,5 +17,12 @@
        
          fill:beige;
     }
+    &--black {
+        fill:rgba(black,0.5);
+    }
+
+    &--works {
+        height: 300px;
+    }
         
 }   
