--- a/src/blog.pug
+++ b/src/blog.pug
@@ -64,22 +64,22 @@ body
          
                 ul.main-menu
                    -var menuitems= ['Мои работы', 'Обо мне','Блог', 'Авторизация'];
-                   -var menuLinks = ['#','#','#', '#'];
+                   -var menuLinks = ['works.html','about.html','blog.html', 'welcome.html'];
                    -for (var i=0;i<4;i++)
                         li.main-menu__item: a.main-menu__link(href=menuLinks[i])=menuitems[i]
 
             .site-footer__social 
                  ul.socials.socials--footer
-                    li.socials__item: a(href="#").socials__link--vk: img(src="./img/vk.svg")
-                    li.socials__item: a(href="#").socials__link--github: img(src="./img/github.svg")
-                    li.socials__item: a(href="#").socials__link--in: img(src="./img/in.svg")
+                    li.socials__item: a(href="#").socials__link--vk: svg: use(xlink:href="./img/sprite.svg#vk")
+                    li.socials__item: a(href="#").socials__link--github: svg: use(xlink:href="./img/sprite.svg#github")
+                    li.socials__item: a(href="#").socials__link--in: svg: use(xlink:href="./img/sprite.svg#in")
         .site-footer__block
             .site-footer__contacts
                 ul.contacts__list.contacts__list--footer
-                    li.contacts__item.contacts__item--block skype__kdn
-                    li.contacts__item.contacts__item--block astakhov@gmail.com
+                    li.contacts__item.contacts__item--block deadspace290
+                    li.contacts__item.contacts__item--block vereshhagin98@mail.ru
                     li.contacts__item.contacts__item--block +7(952)-796-11-99
                     li.contacts__item.contacts__item--block г. Калининград 
 
         .site-footer__underfooter
-            h1.site-footer__underfootermotto © Владимир Астахов | с любовью LoftSchool | 2017
+            h1.site-footer__underfootermotto © Даниил Верещагин | с любовью LoftSchool | 2017
