--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -43,6 +43,7 @@
         &__description {
             margin-left: 40px;
             margin-right: 100px;
+            padding-top:130px;
             font-family: 'Roboto', sans-serif;
             color: #7f8084;
         }
