--- a/src/sass/modules/_block.scss
+++ b/src/sass/modules/_block.scss
@@ -10,17 +10,44 @@
         position: absolute; 
          z-index: 2;
          
-        
-        // &::before {
-        //     content: '';
-        //     position: absolute;
-        //     top:30px;
-        //     border:1px solid red;
-        //     width: 80px;
-        //     height: 15px;
-        // }
+        &--line {
+            &-use {
+                &::before {
+            content: '';
+            position: absolute;
+            left:65%;
+            transform: translate(-50%,-50%);
+            top:100px;
+            border:1px solid #9c9d9f;
+            border-right:none;
+            border-left: none;
+            border-top:none;
+            width: 80px;
+            height: 15px;
+
+            }
+            }
+
+        &::before {
+            content: '';
+            position: absolute;
+            left:65%;
+            transform: translate(-50%,-50%);
+            bottom: -20px;
+            border:1px solid #9c9d9f;
+            border-right:none;
+            border-left: none;
+            border-top:none;
+            width: 80px;
+            height: 15px;
+        }
+        }
         &--pd50 {
             padding-top: 50px;
+            text-align: center;
+            padding-left: 120px;
+            padding-right: 50px;
+            color:#474b57;
         }
 
         &--about {
