--- a/src/sass/modules/_triangle.scss
+++ b/src/sass/modules/_triangle.scss
@@ -18,7 +18,7 @@
          fill:beige;
     }
     &--black {
-        fill:rgba(black,0.5);
+        fill:rgba(#161a29,0.5);
     }
 
     &--works {
