--- a/src/works.pug
+++ b/src/works.pug
@@ -29,7 +29,8 @@ body
                 .arrow-down-pic
                     img(src="./img/arrow_down.svg")
 
-     section.section.about
+     section.section.section--works.about
+            .block__title Мои работы
             .triangle.triangle--black.triangle-left.triangle--works
                     svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none")
                         polygon(points="0,0 0,150 1000,150")
@@ -37,45 +38,45 @@ body
                     svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none" )
                         polygon(points="1000,0 1000,150 0,150")   
 
-            //-  main.school
+            //-  .school
             //-     section.school__site
             //-         article.school__site__info
             //-             h1.school__site__title Сайт школы онлайн <br> образования 
             //-             h3.school__site__subtitle HTML, CSS, JAVASCRIPT
             //-             a(href="http://loftschool.com" target="_blank"): button(type="button").button Посмотреть все работы
                     
-            //-     section.school__preview
-            //-         article.school__preview-art
-            //-             img.school__preview-art__img(src="./img/spritephoto.png")
-            //-         .school__preview-case
-            //-             .school__preview-case--left
-            //-                 img(src="./img/mockup.png")
-            //-             .school__preview-case--right
-            //-                 //- img(src="./img/itloft.png")
-                
-            //- section.about: .wrapper
-            //-     h1.block__title.block__title--about Что обо мне <br>говорят
-            //-     img(src="./img/stars3.svg").star__img--about
-            //-     .blockquote-container
-            //-         mixin info(imgURL,imgsubURL,text,quote)
+                                    //-     section.school__preview
+                                    //-         article.school__preview-art
+                                    //-             img.school__preview-art__img(src="./img/spritephoto.png")
+                                    //-         .school__preview-case
+                                    //-             .school__preview-case--left
+                                    //-                 img(src="./img/mockup.png")
+                                    //-             .school__preview-case--right
+                                    //-                 //- img(src="./img/itloft.png")
+                                        
+                                    //- section.about: .wrapper
+                                    //-     h1.block__title.block__title--about Что обо мне <br>говорят
+                                    //-     img(src="./img/stars3.svg").star__img--about
+                                    //-     .blockquote-container
+                                    //-         mixin info(imgURL,imgsubURL,text,quote)
 
-            //-             .blockquote-left
+                                    //-             .blockquote-left
 
-            //-                     img(src='./img/kdn.png', alt="").blockquote-left__img-kdn
-            //-                     img(src='./img/sub.png').blockquote-left__subimg
-            //-                     blockquote.blockquote-left__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-            //-                     blockquote.blockquote-left__quote лучшее wokflow!
+                                    //-                     img(src='./img/kdn.png', alt="").blockquote-left__img-kdn
+                                    //-                     img(src='./img/sub.png').blockquote-left__subimg
+                                    //-                     blockquote.blockquote-left__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                                    //-                     blockquote.blockquote-left__quote лучшее wokflow!
 
 
-            //-             .blockquote-right
+                                    //-             .blockquote-right
 
-            //-                     img(src='./img/sab.png', alt="").blockquote-right__img-sab
-            //-                     img(src='./img/sub.png').blockquote-right__subimg
-            //-                     blockquote.blockquote-right__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-            //-                     blockquote.blockquote-right__quote Верстка выдержит все
+                                    //-                     img(src='./img/sab.png', alt="").blockquote-right__img-sab
+                                    //-                     img(src='./img/sub.png').blockquote-right__subimg
+                                    //-                     blockquote.blockquote-right__expression тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                                    //-                     blockquote.blockquote-right__quote Верстка выдержит все
 
-            //-         +info('./img/kdn.png','./img/','тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','лучшее wokflow!')
-            //-         +info('./img/sab.png','./img/..', 'тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','Верстка выдержит все')
+                                    //-         +info('./img/kdn.png','./img/','тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','лучшее wokflow!')
+            //-                         //-         +info('./img/sab.png','./img/..', 'тот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!','Верстка выдержит все')
             //- footer.site-footer
             //-     .site-footer__block
             //-         h2.site-footer__motto Этот сайт я сделал в рамках обучения в Школе <br>онлайн образования LoftSchool. 
