--- a/src/sass/modules/_user-description.scss
+++ b/src/sass/modules/_user-description.scss
@@ -1,8 +1,9 @@
 .user-description {
-    position: absolute;
-    top:0;
+    // position: absolute;
+    // top:0;
     // right: 0;
     margin-left: 50%;
+    
 
 
     &__avatar {
@@ -18,6 +19,6 @@
 
         color:#474b57;
         font-family: 'Roboto',sans-serif;
-        padding-top: 30px;
+        padding-top: 130px;
     }
 }
