--- a/src/sass/modules/_blog.scss
+++ b/src/sass/modules/_blog.scss
@@ -1,9 +1,11 @@
 .blog {
-padding-bottom: 60px;
+
+    // padding-bottom: 60px;
 
 &__container {
     margin: 0 auto;
     padding-left:120px;
+    // margin-bottom: 100px;
     width: 780px;
 
 }
