--- a/src/blog.pug
+++ b/src/blog.pug
@@ -27,7 +27,7 @@ body
             .arrow.site-header__scroll
                 .arrow-down-pic
                     img(src="./img/arrow_down.svg")
-    section.section.about.about--white
+    section.section.about.about--white.section--blog
             .triangle.triangle--white.triangle-left
                     svg.triangle__svg(viewBox="0 0 1000 150" preserveAspectRatio="none")
                         polygon(points="0,0 0,150 1000,150")
